<resources>
    <string name="app_name">Media Hora</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">Acerca de</string>
    <string name="txtCorreo">correo@sucorreo.es</string>
    <string name="imgUsuario">Imagen del usuario</string>
    <string name="lblPeso">Peso</string>
    <string name="lblZancada">Zancada</string>
    <string name="lblAltura">Altura</string>



    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>


    <string name="m_inicio">Inicio</string>
    <string name="m_perfil">Perfil</string>
    <string name="m_stats">Estadisticas</string>
    <string name="m_objetivo">Objetivo</string>
    <string name="m_compartir">Compartir</string>
    <string name="m_ajustes">Ajustes</string>
    <string name="m_acerca">Acerca de</string>
    <string name="m_preg">Preguntas frecuentes</string>


    <string name="lblNPasos">10200</string>
    <string name="lblMeta">Meta:</string>
    <string name="txtPasosMeta">12000</string>
    <string name="imgPie">Icono de una huella de pie humano</string>

    <string name="pref_nombre">Nombre</string>
    <string name="pref_correo">Correo</string>
    <string name="pref_peso">Peso</string>
    <string name="pref_sexo">Sexo</string>
    <string name="pref_altura">Altura</string>
    <string name="pref_edad">Edad</string>
    <string name="pref_dist">Longitud de zancada</string>
    <string name="img_fondo">Imagen de fondo</string>
    <string name="pref_fondo">Elija el fondo deseado para la imagen de perfil</string>
    <string name="pref_categ_pers">Información Personal</string>
    <string name="pref_categ_diseño">Diseño</string>
    <string name="pref_categ_perfil">Perfil</string>
    <string name="pref_categ_obj">Objetivo</string>
    <string name="pref_sens">Sensibilidad</string>
    <string name="desc_sens">Comprueba con qué valor tus pasos se cuentan con mayor exactitud</string>
    <string name="desc_calorias">Se usa para mostrar el consumo de calorias</string>
    <string name="desc_nombre">Indique su nombre</string>
    <string name="desc_correo">Indique su correo electrónico</string>
    <string name="pref_dist_desc">Se usa para mostrar la distancia, la velocidad y el consumo de calorias</string>
    <string name="fotoPerfil">Foto de perfil</string>
    <string name="desc_foto">Elija la imagen para su foto de perfil</string>
    <string name="pref_obj_peso">Peso deseado</string>
    <string name="pref_objetivo">Seleccione el peso que desea conseguir</string>
    <string name="pref_obj_tiempo">Tiempo para conseguirlo</string>

    <string name="sel_edad">Seleccione su edad</string>
    <string name="sel_peso">Seleccione su peso (kg)</string>
    <string name="sel_altura">Seleccione su altura (cm)</string>
    <string name="sel_foto">Elija una opción</string>
    <string name="sel_imag">Seleccione app de imagen</string>
    <string name="sel_dist">Seleccione su longitud de zancada (cm)</string>
    <string name="sel_obj_peso">Seleccione su peso deseado</string>
    <string name="sel_obj_tiempo">¿Cumplirás tu objetivo en </string>
    <string name="tomarFoto">Tomar una foto</string>
    <string name="elegirGaleria">Elegir de galería</string>
    <string name="cancelar">Cancelar</string>
    <string name="toastFoto">Imagen de perfil modificada correctamente</string>
    <string name="lblCalorias">Calorias</string>
    <string name="lblVelocidad">V. media</string>
    <string name="lblDist">Distancia</string>
    <string name="lblTiempo">Tiempo</string>
    <string name="acepto">¡A por ello!</string>
    <string name="noAcepto">Cambiar objetivo</string>

    <string name="lblCopyR">© 2016</string>
    <string name="lblNombreApp">30 minutos 1.0</string>
    <string name="lblComp1">- Francisco Ruiz Romero</string>
    <string name="lblComp2">- Rosana Rguez-Bobada Aranda</string>
    <string name="lblAsignatura">Multimedia</string>
    <string name="lblEscuela">Escuela Superior de Informática</string>


    <string name="lblFAQ">Preguntas frecuentes</string>
    <string name="lblCorreoFAQ">Para cualquier otra duda contacte con nosotros en: preguntasFrecuentes@mediahora.es</string>
    <string name="configurarAhora">¡Configurar ahora!</string>
    <string name="masTarde">Más tarde</string>



    <string-array name="pref_fondo_nombre">
        <item>Fondo1</item>
        <item>Fondo2</item>
        <item>Fondo3</item>
    </string-array>
    <string-array name="pref_fondo_val">
        <item>Fondo1</item>
        <item>Fondo2</item>
        <item>Fondo3</item>
    </string-array>

    <string-array name="pref_sexo_nombre">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string-array name="pref_sexo_val">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string-array name="pref_sens_nombre">
        <item>Muy baja</item>
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
        <item>Muy alta</item>
    </string-array>
    <string-array name="pref_sens_val">
        <item>30</item>
        <item>25</item>
        <item>20</item>
        <item>15</item>
        <item>10</item>
    </string-array>

    <string-array name="pref_sensi_nombre">
        <item>Extra alta</item>
        <item>Muy alta</item>
        <item>Alta</item>
        <item>Superior</item>
        <item>Media</item>
        <item>Inferior</item>
        <item>Baja</item>
        <item>Muy baja</item>
        <item>Extra baja</item>
    </string-array>

    <string-array name="pref_sensi_val">
        <item>1.9753</item>
        <item>2.9630</item>
        <item>4.4444</item><!-- 10 * 1.5^(-2) -->
        <item>6.6667</item><!-- 10 * 1.5^(-1) -->
        <item>10</item>
        <item>15</item><!--     10 * 1.5      -->
        <item>22.5</item><!--   10 * 1.5^2    -->
        <item>33.75</item>
        <item>50.625</item>
    </string-array>
</resources>
