<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    android:background="#e5f2ff">


    <group android:id="@+id/g1" android:checkableBehavior="single"

        android:background="#e5f2ff">
        <item
            android:id="@+id/perfil"
            android:checked="false"
            android:icon="@drawable/ic_person"
            android:title="@string/m_perfil" />

        <item
            android:id="@+id/stats"
            android:checked="false"
            android:icon="@drawable/ic_stats"
            android:title="@string/m_stats" />

        <item
            android:id="@+id/objetivo"
            android:checked="false"
            android:icon="@drawable/ic_objetivo"
            android:title="@string/m_objetivo" />

        <item
            android:id="@+id/compartir"
            android:checked="false"
            android:icon="@drawable/ic_share"
            android:title="@string/m_compartir" />

        <item
            android:id="@+id/ajustes"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/m_ajustes" />
    </group>

    <group android:id="@+id/g3" android:checkableBehavior="single">

        <item
            android:id="@+id/faq"
            android:checked="false"
            android:icon="@drawable/ic_help"
            android:title="@string/m_preg" />
        <item
            android:id="@+id/acerca"
            android:checked="false"
            android:icon="@drawable/ic_info"
            android:title="@string/m_acerca" />


    </group>
</menu>