<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#e5f2ff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:id="@+id/imgIcono"
            android:src="@drawable/icon"
            android:contentDescription="Icono de la aplicación."
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblNombreApp"
            android:id="@+id/lblNombreApp"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblComp1"
            android:id="@+id/lblComp1"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:textStyle="normal"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblComp2"
            android:id="@+id/lblComp2"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:textStyle="normal"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblAsignatura"
            android:id="@+id/lblAsignatura"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblEscuela"
            android:id="@+id/lblEscuela"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblCopyR"
            android:id="@+id/lblCopyR"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</LinearLayout>